# Qt-Project-Framework

./: .gitignore  CMakeLists.txt  README.md  cmake.xml
app/: CMakeLists.txt
app/resources/themes/: UpdateThemesQRC__Windows.ps1  generated--dark-mode.css  generated--light-mode.css  themes.qrc
app/src/: Application.cpp  Application.hpp  main.cpp
app/src/theme/: ThemeManager.cpp  ThemeManager.hpp
app/src/utilities/: QtLoggerAdapter.hpp
app/styles/themes/: dark-mode.scss  light-mode.scss
engine/: CMakeLists.txt
engine/src/utilities/: Colour.hpp  StringUtils.hpp  Time.hpp
engine/src/utilities/logging/: Logger.cpp  Logger.hpp  LoggingTypes.hpp
